k8s/backend-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: backend-deployment
  namespace: chat-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      name: chat-app-pod
      namespace: chat-app
      labels:
        app: backend
    spec:
      containers:
      - name: backend-chat-app
        image: sourabhlodhi/backend:latest
        ports:
        - containerPort: 5001
