k8s/statefulset.yml
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: mongodb-statefulset
  namespace: chat-app
spec:
  replicas: 1
  selector:
    matchLabels:  
      app: mongodb
  serviceName: "mongodb"
  template:
    metadata:
      name: mongo-pod
      namespace: chat-app
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo:latest
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongo-data
          mountPath: /mnt/data
      volumes:
      - name: mongo-data
        persistentVolumeClaim:
          claimName: mongo-pvc
