k8s/frontend-svc.yml
kind: Service
apiVersion: v1
metadata:
  name: frontend-svc
  namespace: chat-app
spec:
  selector:
     app: chat
  ports:  
    - protocol: TCP
      port: 80
      targetPort: 80
