k8s/mongo-svc.yml
kind: Service
apiVersion: v1
metadata:
  name: mongodb
  namespace: chat-app
spec:
  clusterIP: None
  selector:
    app: mongodb
  ports:
    - port: 27017
      targetPort: 27017
